Adding server DNS : DNS Propagation Check Configuration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -182,6 +182,18 @@ REQUEST_MAX_SIZE=1048576
 # Minimum probe locations for propagation check
 DNS_PROPAGATION_MIN_LOCATIONS=5
 
+# Default regions for DNS propagation check (comma-separated)
+# Available: americas, europe, asia, oceania, global, all
+DNS_PROBE_REGIONS=americas,europe,asia
+
+# Maximum number of probe locations (default: 20)
+DNS_PROBE_MAX_LOCATIONS=20
+
+# Custom DNS servers for propagation check (optional)
+# Format: "Name1:IP1,Name2:IP2" or just "IP1,IP2"
+# Example: "MyDNS:1.2.3.4,LocalDNS:5.6.7.8"
+# DNS_PROBE_SERVERS=
+
 # -----------------------------------------------------------------------------
 # Host Monitoring Configuration
 # -----------------------------------------------------------------------------
